[project]
name = "alediffuser"
version = "0.1.0"
description = "Diffusion models implementation with DDPM and UNet architectures"
authors = [
    { name = "Alejandro Paredes", email = "alejandroparedeslatorre@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "numpy",
    "tqdm",
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "uv_build>=0.8.3,<0.9.0"
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "alediffuser"
module-root = "src"

[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]
